T1-67 created endpoints for organization